# Comrux.Auth

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
redis/: Dockerfile  entrypoint.sh
src/: app_factory.py  main.py
src/alembic/versions/: 2025_08_07_1455-353d5f4f8902_create_user_table.py  2025_09_29_1438-5ab26fe9ffb5_setup_email_table.py
src/application/: __init__.py
src/application/exceptions/: __init__.py  access_key.py  base.py  email_verification.py  user.py
src/application/ports/: __init__.py  unit_of_work.py
src/application/query_params/: __init__.py  pagination.py  sorting.py  user.py
src/application/services/: current_user.py
src/application/usecases/: __init__.py  change_password.py  get_current_user.py  login_user.py  logout.py  logout_all.py  register_user.py  send_email_verification_link.py  user.py  verify_email.py
src/domain/: __init__.py  policies.py
src/domain/entities/: __init__.py  access_key.py  base.py  email.py  email_verification_object.py  phone.py  user.py
src/domain/exceptions/: base.py  email_verification.py  user.py
src/domain/ports/: __init__.py  clock.py  email_verification_token_generator.py  email_verification_token_hasher.py  hasher.py  user_id_generator.py
src/domain/services/: __init__.py  access_key.py  email.py  email_verification.py  user.py
src/domain/value_objects/: __init__.py  email_address.py  email_object.py  id.py  (+5 more)
src/infrastructure/: __init__.py
src/presentation/: __init__.py  constans.py
src/setup/: __init__.py  config.py  db_helper.py  providers.py
src/utils/: __init__.py
(+115 files in other folders)
